# ChangeLog for dev-ruby/thinking-sphinx
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Sep 2011; Hans de Graaff <graaff@gentoo.org> thinking-sphinx-2.0.7.ebuild:
  Move into separate slot.

*thinking-sphinx-2.0.7 (16 Sep 2011)

  16 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.7.ebuild:
  Version bump.

*thinking-sphinx-1.4.6 (01 Jul 2011)

  01 Jul 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.4.6.ebuild:
  Version bump.

  29 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  thinking-sphinx-1.3.20.ebuild, thinking-sphinx-1.4.0.ebuild,
  thinking-sphinx-1.4.5.ebuild:
  Move for us incompatible version into a slot.

*thinking-sphinx-1.4.5 (28 Jun 2011)

  28 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.4.5.ebuild:
  Version bump.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  thinking-sphinx-1.3.20.ebuild, thinking-sphinx-1.4.0.ebuild:
  Keyword ~x86-macos.

*thinking-sphinx-1.4.0 (10 Dec 2010)

  10 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.4.0.ebuild:
  Version bump.

  10 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.3.16.ebuild:
  Remove old version.

*thinking-sphinx-1.3.20 (23 Sep 2010)

  23 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.3.20.ebuild:
  Version bump.

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.3.14.ebuild:
  Remove old version.

*thinking-sphinx-1.3.16 (03 Mar 2010)

  03 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.3.16.ebuild:
  Version bump.

  11 Feb 2010; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.3.8.ebuild, -thinking-sphinx-1.3.13.ebuild:
  Remove old versions.

*thinking-sphinx-1.3.14 (09 Jan 2010)

  09 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.3.14.ebuild:
  Version bump.

*thinking-sphinx-1.3.13 (15 Dec 2009)

  15 Dec 2009; Hans de Graaff <graaff@gentoo.org>