@@ -6,17 +6,19 @@ DIST thinking-sphinx-1.4.0.gem 144384 RMD160 a7e0debe0b98fe5efdd6e2e4b5ccb2f3db5
 DIST thinking-sphinx-1.4.5.gem 147456 RMD160 65a5dc55d0fd37b83a56cfde16c7ee094df299d4 SHA1 71990192fd93749e775e916c477d3ca3fedec1f6 SHA256 2e2027da010dadfbdf34c7fd74494b75006aacd53bf4e6d62915422f2b2238d2
 DIST thinking-sphinx-1.4.6.gem 148480 RMD160 0f22404e39e120339d004cc72df8badf073039a6 SHA1 8a53c18f019e003b025778373ffa263cdc6ddb09 SHA256 6ab26a23ed6381f6189143f7c305f78e61b344d0ffdc0fcd09c58d95d2b8b0af
 DIST thinking-sphinx-2.0.7.gem 153600 RMD160 3ced8ffd6d6c3acaf1459f17b687c384990048fd SHA1 b247d76deb55eb065d9b5ffccc5bd88334a8a0ed SHA256 52867c8dc5a23c05d625c0230ab13611b7ad267fc333df33f96fb8c22cb86073
+DIST thinking-sphinx-2.0.9.gem 154624 RMD160 db4aea9ef936381b6add286243650f257c12ccd5 SHA1 c00a8f8a4b340e80bfee5393bb3aadaa35c323a0 SHA256 d198745defd103467d995dd8d9376d0ee18b5b091be0ab61045fccc9e22ebdbd
 EBUILD thinking-sphinx-1.3.20.ebuild 817 RMD160 4369c1a9fb1a5aadd9d02b167aa97e1031234504 SHA1 53507365dcd870529deffec0a804a443d91a47d3 SHA256 f73be57cc8b067f0b2215a2cfcdae2c03fe449370e8f5476a9dde99afa76a213
 EBUILD thinking-sphinx-1.4.0.ebuild 817 RMD160 4369c1a9fb1a5aadd9d02b167aa97e1031234504 SHA1 53507365dcd870529deffec0a804a443d91a47d3 SHA256 f73be57cc8b067f0b2215a2cfcdae2c03fe449370e8f5476a9dde99afa76a213
 EBUILD thinking-sphinx-1.4.5.ebuild 813 RMD160 699dfcc8c3c81035c142a10df677df30e3216f56 SHA1 e5220123fdfb5b5965e3de0eedae61aba50cbd1c SHA256 c86fdea50475d74421b5545d9a7ae9cf4dce1d3b3c1188a3a04a95640543f306
 EBUILD thinking-sphinx-1.4.6.ebuild 813 RMD160 5947cd1b72b2d2aad73cb1de0ba6e82888c8f29e SHA1 2c64e308e683af25bbd67a99a042395290cbcb23 SHA256 d785e14370e9bc260bfa5340450fbe232f1a9089ed5c5582b7983080659c9f70
 EBUILD thinking-sphinx-2.0.7.ebuild 647 RMD160 58a78fcb8d19d6f8e94e5f4264bdc70463a68694 SHA1 fb9ab626dad90540e6b0089d8794fe79317c675d SHA256 a8af5a13de395b787fd86b8fd505194b3f8aab88ffbea7da47dd74d5c847f40f
-MISC ChangeLog 2314 RMD160 7e91719a9251960835f41a8e3085293f0501fc4f SHA1 b8e484b7a18d0119687342d87f6ce61db8c0d9e3 SHA256 f29f956622120c6784d73b3cd9a4ab1cb0ad1ae7463f68f669085f5ec8c82ed1
+EBUILD thinking-sphinx-2.0.9.ebuild 647 RMD160 58a78fcb8d19d6f8e94e5f4264bdc70463a68694 SHA1 fb9ab626dad90540e6b0089d8794fe79317c675d SHA256 a8af5a13de395b787fd86b8fd505194b3f8aab88ffbea7da47dd74d5c847f40f
+MISC ChangeLog 2452 RMD160 38180cb3f4defd6405b1275dbdb0df7339090cc5 SHA1 ec9254452e1ff4b44fe8b961620ebe661725ed36 SHA256 8fe651667ff014aa81c2ea150999c8b164eba2ed45b3df002e0b332f83c14985
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk5zPy8ACgkQiIP6VqMIqNdurwEAjTQgY9Ek+RmHkWfgvdoldMxF
-2NaSeXmpakjpclTDJUIA/14XNT6eU3r+PoR7LxGPJQGVN+G0pjbc2KUZsNMYm43G
-=b0k2
+iF4EAREIAAYFAk6Vq5wACgkQiIP6VqMIqNcDPgD+PhoCX16w4dPf/eFUjGyKudT6
+zzl2y4qbJwtGctgj12YA/jWE1rgFGxOc1uOgCquS5XKjkdxnhyvdjS8czJGjOQq6
+=Ol61
 -----END PGP SIGNATURE-----
